# hackathon_SZ_2026

./: .gitignore  PRD.md  README.md  SKILLS.md  start.bat  start.ps1
backend/: main.py  pyproject.toml
frontend/: index.html
