[project]
name = "storybook-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.26",
]
